cmake_minimum_required(VERSION 3.16)

project(trial1 VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)

qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(apptrial1
    main.cpp
)

qt_add_qml_module(apptrial1
    URI trial1
    QML_FILES
        Main.qml
        RESOURCES
QML_FILES content/button.qml content/DemoPage.qml content/WelcomePage.qml
QML_FILES content/PlaceholderPage.qml content/SplashPage.qml content/WelcomePage.qml
QML_FILES content/MenuPage.qml
QML_FILES content/IntroPage.qml
QML_FILES content/UserMenu.qml
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(apptrial1 PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.apptrial1
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(apptrial1
    PRIVATE Qt6::Quick
)

include(GNUInstallDirs)
install(TARGETS apptrial1
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
